# llm-engineer-demo

./: .env.example  .gitignore  Modelfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  pipeline.py
app/agent/: graph.py  nodes.py  state.py  tools_web.py
app/api/: routes_chat.py  schemas.py
app/eval/: metrics.py
app/guardrails/: checks.py
app/llm/: backends.py  client.py  completion.py  params.py  resilience.py
app/optimization/: cache.py
app/prompts/: templates.py
app/retrieval/: chunking.py  embeddings.py  loader.py  rerank.py  retriever.py  vectorstore.py
app/schemas/: domain.py
app/tools/: registry.py
data/legal_docs/: luat-doanh-nghiep-2026-trich.md
scripts/: index_demo.py  ingest.py
tests/: test_agent.py  test_backends.py  test_chat.py  test_rag.py  test_retrieval.py
training/: README.md  config.py  finetune_colab.ipynb  merge_adapter.py  prepare_data.py  requirements-train.txt  train_qlora.py
training/data/: legal_seed.jsonl
