[project]
name = "rag-legal-assistant"
version = "0.1.0"
description = "Vietnamese Legal Assistant — RAG chatbot xây dựng xuyên suốt Module I (LLM Engineer)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
